<resources>

    <string name="debug_value">AhHuat:nvhMZkBEq2TTcaRpiOzHESOsDkg2:Seafood:0</string>

    <string name="app_name">iPayU</string>
    <string name="action_logout">Log Out</string>
    <string name="action_settings">Setting</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

</resources>
