<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.payment.snappay.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@android:color/white"
                android:elevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_background">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.8"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bg_theme" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextWithShadow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-medium"
                        android:padding="4dp"
                        android:text="@string/app_name"
                        android:textColor="@color/visa_gold"
                        android:textSize="32sp" />

                    <TextView
                        style="@style/TextWithShadow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-medium"
                        android:text="for consumer"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="16sp" />

                    <android.support.v4.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="32dp" />

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="consumer_01@snappay.com" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="secret" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <FrameLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@color/colorPrimary"
                    android:elevation="4dp">

                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/action_sign_in"
                        android:textColor="@android:color/primary_text_dark"
                        android:textStyle="bold" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
